--- a/chinslickingweb/chinslickingweb_nginx.conf
+++ b/chinslickingweb/chinslickingweb_nginx.conf
@@ -1,7 +1,7 @@
-# chfweb_nginx.conf
+# chinslickingweb_nginx.conf
 
 upstream django{
-    # server unix:///opt/project/chf-project/chfweb/chfweb.sock;
+    # server unix://var/www/chinslickingweb/chinslickingweb.sock;
     server 127.0.0.1:9000;
 }
 
@@ -14,19 +14,19 @@ server{
     client_max_body_size    75M;
 
     location /media {
-        alias   /opt/project/chf-project/chfweb/uploads;
+        alias   /var/www/chinslickingweb/uploads;
     }
 
     location /static {
         expires 30d;
         autoindex on;
         add_header Cache-Control private;
-        alias   /opt/project/chf-project/chfweb/static;
+        alias   /var/www/chinslickingweb/static;
     }
 
     # finally, send all non-media requests to the django server
     location / {
-        include     /opt/project/chf-project/chfweb/uwsgi_params;
+        include     /var/www/chinslickingweb/uwsgi_params;
         uwsgi_pass  django;
         uwsgi_read_timeout 2;
     }
