--- a/chinslickingweb/chinslickingweb_uwsgi.ini
+++ b/chinslickingweb/chinslickingweb_uwsgi.ini
@@ -2,23 +2,23 @@
 
 # the socket use the full path to be safe
 # 使用nginx连接时使用 转发给nginx的端口号
-# socket=/opt/project/chf-project/chfweb/chfweb.sock
-socket = :8020
+# socket = /var/www/chinslickingweb/chinslickingweb.sock
+socket = :8023
 # 直接做web服务器使用 直接访问uwsgi的端口号，绕过nginx
-http = :8021
+http = :8024
 
 # django-related settings
 # the base directory full path 项目的绝对路径
-chdir = /var/www/chfweb
+chdir = /var/www/chinslickingweb
 # 项目的settings模块路径
 # env = DJANGO_SETTINGS_MODULE=project_name.settings
 # django's wsgi file wsgi的application模块路径
-module = chfweb.wsgi
+module = chinslickingweb.wsgi
 # 项目中wsgi.py文件的目录，相对于项目目录 Django项目wsgi.py文件的相对路径
-# wsgi-file = chfweb/wsgi.py
+# wsgi-file = chinslickingweb/wsgi.py
 # the virtualenv full path
-# home = /root/.local/share/virtualenvs/chfweb-HniV3ZI0
-virtualenv = /root/.local/share/virtualenvs/chfweb-HniV3ZI0
+# home = /root/.local/share/virtualenvs/chinslickingweb-X0XLUAMh
+virtualenv = /root/.local/share/virtualenvs/chinslickingweb-X0XLUAMh
 # pythonpath = /usr/bin/python
 
 # gevent协程支持，最大100个
@@ -41,11 +41,12 @@ threads = 2
 
 # 监听端口
 # stats = 127.0.0.1:9100
-# stats = %(chdir)/uwsgi/uwsgi.status
-stats = uwsgi.status
-# pidfile = %(chdir)/uwsgi/uwsgi.pid
-# pidfile = /var/www/chfweb/uwsgi/uwsgi.pid
-pidfile = uwsgi.pid
+stats = %(chdir)/uwsgi/uwsgi.status
+# stats = uwsgi.status
+
+pidfile = %(chdir)/uwsgi/uwsgi.pid
+# pidfile = /var/www/chinslickingweb/uwsgi/uwsgi.pid
+# pidfile = uwsgi.pid
 
 # with appropriate permissions - may be needed
 chmod-socket = 666
@@ -54,7 +55,7 @@ vacuum = true
 harakiri = 30
 
 # 目录中一旦有文件被改动就自动重启
-touch-reload = /var/www/chfweb
+touch-reload = /var/www/chinslickingweb
 py-autoreload = 1
 
 # 存放日志
@@ -63,6 +64,6 @@ py-autoreload = 1
 disable-logging = true
 # 以固定的文件大小（单位KB）log-maxsize = 50000000 就是50M一个日志文件
 log-maxsize = 50000000
-# daemonize = %(chdir)/uwsgi/uwsgi.log
-# daemonize = /var/www/chfweb/uwsgi/uwsgi.log
-daemonize = uwsgi.log
+daemonize = %(chdir)/uwsgi/uwsgi.log
+# daemonize = /var/www/chinslickingweb/uwsgi/uwsgi.log
+# daemonize = uwsgi.log
