--- a/Pipfile
+++ b/Pipfile
@@ -1,16 +1,28 @@
 [[source]]
-name = "pypi"
-url = "https://pypi.org/simple"
+name = "tsinghua"
+url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
 verify_ssl = true
 
 [dev-packages]
+django = "*"
+pillow = "*"
+pytz = "*"
+setuptools = "*"
+sqlparse = "*"
+pip = "*"
+wheel = "*"
 
 [packages]
-django-simpleui = "*"
-mysqlclient = "*"
-setuptools = "*"
-wheel = "*"
+django = "*"
 pillow = "*"
+pytz = "*"
+setuptools = "*"
+sqlparse = "*"
+pip = "*"
+wheel = "*"
+django-simpleui = "*"
+pymysql = "*"
+mysqlclient = "*"
 
 [requires]
 python_version = "3.7"
