--- a/Pipfile
+++ b/Pipfile
@@ -7,19 +7,16 @@ verify_ssl = true
 django = "*"
 pillow = "*"
 pytz = "*"
-setuptools = "*"
 sqlparse = "*"
-pip = "*"
-wheel = "*"
+django-simpleui = "*"
+pymysql = "*"
+mysqlclient = "*"
 
 [packages]
 django = "*"
 pillow = "*"
 pytz = "*"
-setuptools = "*"
 sqlparse = "*"
-pip = "*"
-wheel = "*"
 django-simpleui = "*"
 pymysql = "*"
 mysqlclient = "*"
