--- a/chinslickingweb/chinslickingweb_uwsgi.ini
+++ b/chinslickingweb/chinslickingweb_uwsgi.ini
@@ -89,6 +89,6 @@ disable-logging = true
 ; 以固定的文件大小（单位KB）log-maxsize = 50000000 就是50M一个日志文件
 log-maxsize = 50000000
 
-daemonize = %(chdir)/uwsgi.log
+; daemonize = %(chdir)/uwsgi.log
 ; daemonize = /var/www/chinslickingweb/uwsgi/uwsgi.log
 ; daemonize = uwsgi.log
